setup webpack and pg-promise to retrieve from postgres database

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>NYC vehicle collisions</title>
+    <title>NYC Vehicle Collision</title>
   </head>
   <body>
     <div id="mapid"></div>
